# remote-server-api

./: .gitignore  Cargo.toml  go.mod  go.sum  netlify.toml
.github/workflows/: go.yml
cmd/server/: main.go
pkg/login/: handler.go  model.go  service.go
pkg/server/details/: handler.go  hanfler.go  model.go
pkg/server/details/cpu_info/: handler.go  model.go  service.go
pkg/server/details/disk_usage/: handler.go  model.go  service.go
pkg/server/details/running_processes/: handler.go  model.go  service.go
pkg/server/docker/: handler.go  model.go  service.go
pkg/utils/: utils.go
src/: main.rs
